# phish.net-ratings

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
.github/workflows/: scrape.yml
data/csv/: ratings_1984.csv  ratings_1985.csv  ratings_1986.csv  ratings_1987.csv  ratings_1988.csv  ratings_1989.csv  ratings_1990.csv  ratings_1991.csv  ratings_1992.csv  ratings_1993.csv  ratings_1994.csv  ratings_1995.csv  ratings_1996.csv  ratings_1997.csv  ratings_1998.csv  ratings_1999.csv  ratings_2000.csv  ratings_2001.csv  ratings_2002.csv  ratings_2003.csv  ratings_2004.csv  ratings_2008.csv  ratings_2009.csv  ratings_2010.csv  ratings_2011.csv  ratings_2012.csv  ratings_2013.csv  ratings_2014.csv  ratings_2015.csv  ratings_2016.csv  ratings_2017.csv  ratings_2018.csv  ratings_2019.csv  ratings_2020.csv  ratings_2021.csv  ratings_2022.csv  ratings_2023.csv  ratings_2024.csv  ratings_2025.csv  ratings_2026.csv
src/phish_show_ratings/: __main__.py  config.py  db.py  export.py  logging.py  models.py  scraper.py
tests/: test_db.py  test_export.py  test_integration.py  test_models.py  test_scraper.py
